# gamer_time

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TILE_ASSET_WORKFLOW.md  refactor_checklist.md
assets/maps/: grass_tileset_map.tmx
shaders/: text.frag  text.frag.spv  text.vert  text.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: app.cpp  app.h  common.h  llama_worker.cpp  llama_worker.h  main.cpp  vulkan_renderer.cpp  vulkan_renderer.h
src/ai/: llama_controller.cpp  llama_controller.h  token_stream.cpp  token_stream.h
src/app/: application.cpp  application.h  runtime_config.h
src/assets/: atlas_asset.cpp  atlas_asset.h  image_loader.cpp  image_loader.h  tmx_map_loader.cpp  tmx_map_loader.h
src/core/: types.h
src/game/: collision_world.cpp  collision_world.h  command_queue.cpp  command_queue.h  components.h  fog_of_war_system.cpp  fog_of_war_system.h  map_world.cpp  map_world.h  navigation_system.cpp  navigation_system.h  selection_system.cpp  selection_system.h  tile_map.cpp  tile_map.h  world.cpp  world.h
src/gpu/: buffer_utils.cpp  buffer_utils.h  gpu_resources.cpp  gpu_resources.h  swapchain_manager.cpp  swapchain_manager.h  texture_utils.cpp  texture_utils.h  vulkan_context.cpp  vulkan_context.h
src/platform/: camera_controller.cpp  camera_controller.h  input_state.h  sdl_platform.cpp  sdl_platform.h
src/render/: batch_builder.cpp  batch_builder.h  depth_sorter.cpp  depth_sorter.h  frustum_culler.cpp  frustum_culler.h  projection_system.cpp  projection_system.h  render_extractor.cpp  render_extractor.h  render_world.h  scene_renderer.cpp  scene_renderer.h  text_overlay_renderer.cpp  text_overlay_renderer.h
